@@ -53,8 +53,8 @@ components/services/install/lib/eazel-package-system.c
 components/services/install/lib/eazel-package-system-rpm3.c
 components/services/install/lib/eazel-package-system-types.c
 components/services/install/lib/eazel-softcat.c
-components/services/install/nautilus-view/nautilus-service-install-view.c
-components/services/install/nautilus-view/Nautilus_View_install.oaf.in
+components/services/install-view/nautilus-service-install-view.c
+components/services/install-view/Nautilus_View_install.oaf.in
 components/services/install/server/Trilobite_Service_install.oaf.in
 components/services/inventory/eazel-inventory-client.c
 components/services/inventory/eazel-inventory-service.c
@@ -74,7 +74,6 @@ components/services/trilobite/libtrilobite/trilobite-core-network-slim.c
 components/services/trilobite/libtrilobite/trilobite-core-utils.c
 components/services/trilobite/sample/nautilus-view/Nautilus_View_service-sample.oaf.in
 components/services/trilobite/sample/service/Trilobite_Service_sample.oaf.in
-components/services/vault/command-line/main.c
 components/text/nautilus-text-view.c
 components/text/nautilus-text-view-ui.xml
 components/text/Nautilus_View_text.oaf.in
