@@ -1,3 +1,10 @@
+2001-02-25  Dan Mueth  <dan@eazel.com>
+
+	reviewed by: Robey Pointer  <robey@eazel.com>
+
+	* po/POTFILES.in: Fixed breakage caused by mjs moving some
+	files around and forgetting to update this file.
+
 2001-02-24  Robey Pointer  <robey@eazel.com>
 
 	reviewed by: Eskil Heyn Olsen <eskil@eazel.com>
